kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: accessmanager$(postfix)
  namespace: backend
  annotations:
    boot.spring.io/actuator: http://:8090/accessmanager/actuator
spec:
  selector:
    app: accessmanager
  ports:
    - port: 8090
