kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accessmanager
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert-frontend-letsencrypt-cert
spec:
  rules:
  - host: efs-$(environment).westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /accessmanager/*
        pathType: Prefix
        backend:
          service:
            name: accessmanager
            port:
              number: 8090
  - host: $(main-domain)
    http:
      paths:
      - path: /accessmanager/*
        pathType: Prefix
        backend:
          service:
            name: accessmanager
            port:
              number: 8090
